tema17/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: "/grafana(/|$)(.*)"
          backend:
            service:
              name: grafana
              port:
                number: 3000
